Small fixes * Missing space in SpecialPage.php * Raising z-index of .suggestions (when used in a jQuery UI modal box the suggestion list appeared behind the modal instead of on top (ui modal has z-index: 1000; )

--- a/resources/jquery/jquery.suggestions.css
+++ b/resources/jquery/jquery.suggestions.css
@@ -7,7 +7,7 @@
 	left: 0px;
 	width: 0px;
 	border: none;
-	z-index: 99;
+	z-index: 1099;
 	padding: 0;
 	margin: -1px -1px 0 0;
 }
